2013-07-22  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_proc.c (dt_proc_resume): Debugging improvement.
	(dt_proc_control_cleanup): Mention when a lock is being reset.
	(dt_proc_dpr_lock): Mention the PID being locked.
	(dt_proc_dpr_unlock): Likewise for unlocking.

2013-07-19  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Pcontrol.h (ps_prochandle_t.awaiting_pending_stops):
	New, true when libproc has halted a process, before it has waited
	for it.
	* libproc/Pcontrol.c (Pwait_internal): If waiting for a pending
	stop with no pending_stops outstanding, and this Pwait() is
	blocking, convert it to nonblocking.  If we are not runnable,
	never do a blocking Pwait().
	(Ptrace): If the process is dead, don't bother trying to stop it.
	Maintain awaiting_pending_stops.  Keep waiting for the SIGSTOP to
	be received until either we have no pending stops left or the
	process is no longer runnable.

	* libproc/rtld.db (rd_ldso_consistent_begin): Do nothing if
	already halted, whether at a breakpoint or not.
	(rd_ldso_nonzero_lmid_consistent_begin): Likewise.  If the
	child dies while we are waiting for a consistent state,
	note it rather than trying to wait for it.
	(rd_loadobj_iter): Do not try to run over a dead process.
	(rd_event_disable): Unset rd_monitoring when removing the r_brk
	breakpoint.
	* libdtrace/dt_proc.c (dt_proc_attach): Ditch useless debugging.
	(dt_proc_control): Do not whine about PS_TRACESTOPped processes
	if we have just done a proxy Pwait() for just that.

	* test/demo/act/ustack*: Check lstat/newlstat, not read().
	Just check for the presence of particular functions, not the
	precise output of the stack trace.

	* test/triggers/.gitignore: Ignore provider header files.

2013-07-18  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Avoid catching options with names containing other
	options during option extraction.  Strip trailing spaces from
	option values.  Add @@trigger-timing.
